# luma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  RULES.md  SECURITY.md  demo.tape  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: event.rs  main.rs
src/config/: auth.rs  instructions.rs  mod.rs  models.rs  prefs.rs  prompt.rs  skills.rs
src/config/prompt/: deep.md  openai_examples.md  openai_extra.md  rush.md  smart.md  tools_claude.md  tools_codex.md  tools_openai.md
src/core/: agent.rs  mod.rs  provider.rs  registry.rs  session.rs  tool.rs  types.rs
src/core/agent/: summary.rs  turn.rs
src/provider/: claude.rs  codex.rs  mod.rs  openai.rs  retry.rs  sse.rs
src/tool/: apply_patch.rs  bash.rs  bash_safety.rs  diff.rs  edit.rs  gh_ls.rs  gh_search.rs  glob.rs  grep.rs  mod.rs  read.rs  shell.rs  web_search.rs  write.rs
src/tool/apply_patch/: parse.rs
src/tool/gh_file/: mod.rs  scoring.rs
src/tool/web_fetch/: bm25.rs  html.rs  mod.rs  ranking.rs
src/tui/: app.rs  block.rs  document.rs  layout.rs  markdown.rs  mod.rs  output.rs  picker.rs  prompt.rs  renderer.rs  scroll.rs  selection.rs  status.rs  stream.rs  term.rs  text.rs  theme.rs  view.rs  viewport.rs
src/tui/app/: agent.rs  commands.rs  dispatch.rs  input.rs  render.rs  state.rs
src/tui/block/: chrome.rs  diff.rs  mod.rs  render.rs  tests.rs  text.rs  tool.rs
src/tui/markdown/: highlight.rs  inline.rs  table.rs
src/tui/prompt/: buffer.rs  completion.rs  keys.rs  mod.rs  render.rs
src/tui/renderer/: mod.rs  paint.rs
src/tui/text/: buffer.rs  cell.rs  wrap.rs
