[package]
name = "luma"
version = "0.3.0-beta.3"
edition = "2024"
description = "Lightweight, token-optimized coding agent with multi-provider AI support (Anthropic Claude + OpenAI)"
authors = ["Nghyane"]
license = "MIT"
repository = "https://github.com/nghyane/luma"
homepage = "https://github.com/nghyane/luma"
documentation = "https://github.com/nghyane/luma#readme"
readme = "README.md"
keywords = ["ai", "coding-assistant", "rust", "cli", "token-optimization"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "signal", "io-util", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
anyhow = "1"
crossterm = "0.28"
sha2 = "0.10"
futures = "0.3"
globset = "0.4"
regex = "1"
unicode-width = "0.2"
ignore = "0.4.25"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "luma"
path = "src/main.rs"
